--- a/less/tag-cloud.less
+++ b/less/tag-cloud.less
@@ -66,7 +66,7 @@
     line-height: 28px;
     margin: 0 2px;
     margin-bottom: 8px;
-    background-color: var(--gray-dark);
+    background-color: var(--slighter-bg-color);
     &:hover,
     &:active,
     &.focus {
